@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-08T16:10:39Z",
-  "count_outdated" : 5288,
-  "uniques_outdated" : 1675,
+  "timestamp" : "2023-10-09T00:43:30Z",
+  "count_outdated" : 5290,
+  "uniques_outdated" : 1676,
   "count" : 5502,
   "uniques" : 1774,
   "clones" : [
-    {
-      "timestamp": "2023-09-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-25T00:00:00Z",
       "count": 3,
