@@ -1,12 +1,7 @@
 {
-  "count": 213,
+  "count": 212,
   "uniques": 68,
   "clones": [
-    {
-      "timestamp": "2023-09-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-25T00:00:00Z",
       "count": 3,
